Fixed the spacing on the described list

--- a/css/_describedlist.css
+++ b/css/_describedlist.css
@@ -44,6 +44,7 @@ dd {
         display: flex;
         flex-direction: row;
         margin-block-start: 0;
+        max-height: 180px;
     }
 
     dl > div {
